--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "discord.js": "^12.3.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.10.7",
     "nodemon": "^2.0.4"
   }
 }
