--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/pedrohenriquebraga/lilly-bot#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "discord.js": "^12.3.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
