--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
 RewriteEngine On
-RewriteCond %{HTTP_HOST} ^yourdomain.com [NC]
+RewriteCond %{HTTP_HOST} ^lilly-discordbot.herokuapp.com/ [NC]
 RewriteRule ^(.*)$ https://lilly-discordbot.herokuapp.com/$1 [L,R=301]
