--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,3 @@
 RewriteEngine On
-RewriteCond %{HTTPS_HOST} ^www\.lilly-discordbot\.herokuapp\.com/ [NC]
+RewriteCond %{HTTP_HOST} ^www\.lilly-discordbot\.herokuapp\.com/ [NC]
 RewriteRule ^(.*)$ https://lilly-discordbot.herokuapp.com/$1 [L,R=301]
