--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,4 @@
 RewriteEngine On
-RewriteCond %{HTTP_HOST} ^www\.lilly-discordbot\.herokuapp\.com/ [NC]
-RewriteRule ^(.*)$ https://lilly-discordbot.herokuapp.com/$1 [L,R=301]
+RewriteCond %{HTTPS} off [OR]
+RewriteCond %{HTTP_HOST} ^www\. [NC]
+RewriteRule ^ https://lilly-discordbot.herokuapp.com/%{REQUEST_URI} [L,NE,R=301]
