Add routes on API and upgrade the commands '' and ''

--- a/.env_example
+++ b/.env_example
@@ -1,2 +1,2 @@
-DISCORD_TOKEN=<Chave Secreta do Bot>
-MONGO_PASSWORD=<Senha do Usuário do MongoDB>
+DISCORD_TOKEN=Chave Secreta do Bot
+MONGO_URLCONNECTION=URL de conexão com o MongoDb Atlas
