--- a/.env_example
+++ b/.env_example
@@ -1,2 +1,4 @@
 DISCORD_TOKEN=Chave Secreta do Bot
 MONGO_URLCONNECTION=URL de conexão com o MongoDb Atlas
+DBL_TOKEN=Token do Webhook da top.gg
+DBL_AUTH_PASS=Senha da conexão com a top.gg
