--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/pedrohenriquebraga/lilly-bot#readme",
   "dependencies": {
+    "axios": "^0.21.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dblapi.js": "^2.4.1",
