Add machines on model

--- a/.env_example
+++ b/.env_example
@@ -2,3 +2,4 @@ DISCORD_TOKEN=Chave Secreta do Bot
 MONGO_URLCONNECTION=URL de conexão com o MongoDb Atlas
 DBL_TOKEN=Token do Webhook da top.gg
 DBL_AUTH_PASS=Senha da conexão com a top.gg
+YOUTUBE_SEARCH_API_TOKEN=Token da API do Youtube
